--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -11,8 +11,8 @@
     justify-content: center;
     border-radius: 20px;
     border: 1px solid rgba(0,0,0,0.2);
-    width: 90%;
-    max-width: 980px;
+    width: 95%;
+    max-width: 1100px;
 }
 
 
